--- a/project-a/modify_content.yaml
+++ b/project-a/modify_content.yaml
@@ -4,6 +4,8 @@
   gather_facts: yes
   tasks:
     - name: Modify content
-      ping: 
+      lineinfile: 
+        path: /tmp/testing
+        line: This is line by Ansible.
       when: ansible_distribution == "CentOS" and
             ansible_distribution_major_version == "7"
