--- a/project-a/variable.yaml
+++ b/project-a/variable.yaml
@@ -1,11 +1,11 @@
 ---
 - name: Call avriables
   hosts: all
-  gather_facts: no
+  gather_facts: yes
   vars:
     - a: "hello"
     - b: "bye"
   tasks:
     - name: Print message
       debug:
-        msg: "Operating System = {{ ansible_distribution}}"
+        msg: "Python Version = {{ ansible_python_version }}"
