--- a/project-b/packages.yaml
+++ b/project-b/packages.yaml
@@ -15,17 +15,17 @@
         
         state: latest
       when: ansible_pkg_mgr == "yum"
-      register: results
+      register: results_yum_task
 
     - name: Print Results
       debug:
-        msg: "{{ results }}"
+        msg: "{{ results_yum_task }}"
 
     - name: install packages with APT
       apt:
         name: "{{ packages }}"
           
         state: latest
-      when: ansible_pkg_mgr == "apt" and results is failed
+      when: ansible_pkg_mgr == "apt" and results_yum_task is failed
 
 
